--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "helmet": "^7.0.0",
     "ioredis": "^5.3.2",
     "jsencrypt": "^3.3.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.2",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
@@ -81,6 +82,7 @@
     "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^28.1.8",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^16.18.46",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
