--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "strict": true
+    "strict": true,
+    "strictPropertyInitialization": false,
   },
   "include": ["src/**/*.ts"]
 }
