--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/bull": "^10.0.1",
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/class-validator": "^0.13.4",
@@ -28,6 +30,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.2",
     "@nestjs/event-emitter": "^2.0.2",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/mongoose": "^10.0.1",
@@ -53,6 +56,7 @@
     "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "generic-pool": "^3.9.0",
+    "graphql": "^16.8.1",
     "helmet": "^7.0.0",
     "ioredis": "^5.3.2",
     "jsencrypt": "^3.3.2",
